--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "laravel/framework": "^5.8 || ^6 || ^7 || ^8",
         "laravel/passport": "^7 || ^8 || ^9",
         "mews/purifier": "^3.1",
-        "cviebrock/eloquent-sluggable": "^4 || ^6 || ^7",
+        "cviebrock/eloquent-sluggable": "^4 || ^6 || ^7 || ^8",
         "laravel-frontend-presets/tailwindcss": "^4.1",
         "laravel/ui": "^2.1",
         "kg-bot/laravel-localization-to-vue": "^1.6"
