--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "laravel/framework": "^5.8 || ^6 || ^7 || ^8",
-        "laravel/passport": "^7 || ^8 || ^9",
+        "laravel/passport": "^9 || ^10",
         "mews/purifier": "^3.1",
         "cviebrock/eloquent-sluggable": "^4 || ^6 || ^7 || ^8",
         "laravel-frontend-presets/tailwindcss": "^4.1",
